0.3.4 (dev)
  BugFix: When clicking on a outdated pkg inside Output tab, do not go to the Info
    tab if the pkg is not shown in the list.
  BugFix: Update FreeBSD pkg wiki site (thanks to eduardo).
  BugFix: Show "Installed on" column while searching for remote pkgs.
  BugFix: Files tab expand all items by default.
  Now using the unified qt-sudo project (https://github.com/aarnt/qt-sudo) for privilege escalation.

0.3.3 (2023/09/08)
  BugFix: openFile always left a running file manager even after program close.
  Synced octopkg-doas with LXQt-sudo 1.3.0 version.
  Added a stop button next to the progress bar to cancel running transaction.
  Make the project compatible with both Qt5 and Qt6.

0.3.2 (2022/12/31)
  BugFix: WM testing code now uses ps -aux. 
  BugFix: Test also if doas.conf is available at startup.
  BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
  BugFix: Updated FreeBSD rss url.
  BugFix: Package search did not work correctly when query string contained a "+" sign.
  BugFix: Refresh of Info/File tabs and focus/key navigation improvements.
  Synced octopkg-doas with LXQt-sudo 1.1.0 version.
  Changed "Sync database" option name to "Check updates".
  Actions tab shows a counter feedback for inserts (with a plus signal) and 
    removals (with a minus signal) and does not steal focus anymore.
  Added support for "^" and "$" characters in remote searches. 

0.3.1 (2020/10/29)
  Added "Installed On" column on installed package list.
  Make locate work with "search by file", giving suggestions on a popup window.
  Make code compatible with Qt 5.15 version. 
  BugFix: updated install dir of octopkg-doas to /usr/local/lib/octopkg.
  BugFix: removed "/" char option when "Search by File" was selected before searching 
  	for a remote pkg.

0.3.0 (2020/07/18)
  BugFix in GhostBSD repo guessing;
  BugFix: Package list does not flashes at program startup anymore.